crates/b2c-codegen/tests/it/snapshots/it__snapshots__ask_variants.snap
---
source: crates/b2c-codegen/tests/it/snapshots.rs
expression: render(&project)
---
// Generated by Blocks2Cpp 1.0.0 from project "Snapshot Tests", module "main".
// Edit the blocks, not this file – changes here are overwritten.

#include <cctype>
#include <cstdlib>
#include <iostream>
#include <limits>
#include <string>

// ---- Blocks2Cpp support helpers (only those used) ------------------------
namespace b2c {

/// Prints `prompt` and reads a line of text, skipping empty lines and leading
/// spaces. At the end of the input (for example when the input comes from a
/// file), prints "Input ended" to the error stream and exits with code 1.
inline std::string ask_line(const std::string& prompt = "") {
    std::cout << prompt;
    std::string line;
    if (!std::getline(std::cin >> std::ws, line)) {
        std::cerr << "Input ended" << '\n';
        std::exit(1);
    }
    if (!line.empty() && line.back() == '\r') {
        line.pop_back();
    }
    return line;
}

/// The message shown when the typed input is not a valid `T`.
template <typename T>
const char* invalid_input_message() {
    return "Please enter a valid value.";
}

/// The message shown when the typed input is not a whole number.
template <>
inline const char* invalid_input_message<int>() {
    return "Please enter a whole number.";
}

/// The message shown when the typed input is not a number.
template <>
inline const char* invalid_input_message<double>() {
    return "Please enter a number.";
}

/// The message shown when the typed input is not true or false.
template <>
inline const char* invalid_input_message<bool>() {
    return "Please enter true or false.";
}

/// Reads one `T` from standard input. Returns false if the input is not a
/// valid `T`.
template <typename T>
bool read_value(T& value) {
    return static_cast<bool>(std::cin >> value);
}

/// Reads a true/false answer: accepts true/false, yes/no and 1/0, in any
/// letter case. Returns false for any other word.
inline bool read_value(bool& value) {
    std::string word;
    if (!(std::cin >> word)) {
        return false;
    }
    for (char& letter : word) {
        letter = static_cast<char>(std::tolower(static_cast<unsigned char>(letter)));
    }
    if (word == "true" || word == "yes" || word == "1") {
        value = true;
        return true;
    }
    if (word == "false" || word == "no" || word == "0") {
        value = false;
        return true;
    }
    return false;
}

/// Prints `prompt` and reads a `T` (a number, a character or true/false),
/// asking again until the input is valid. The rest of the line after the
/// value is ignored. At the end of the input (for example when the input
/// comes from a file), prints "Input ended" to the error stream and exits
/// with code 1 instead of asking forever.
template <typename T>
T ask(const std::string& prompt = "") {
    while (true) {
        std::cout << prompt;
        T value{};
        if (read_value(value)) {
            std::cin.ignore(std::numeric_limits<std::streamsize>::max(), '\n');
            return value;
        }
        if (std::cin.eof()) {
            std::cerr << "Input ended" << '\n';
            std::exit(1);
        }
        std::cin.clear();
        std::cin.ignore(std::numeric_limits<std::streamsize>::max(), '\n');
        std::cout << invalid_input_message<T>() << '\n';
    }
}

}  // namespace b2c
// ---- End of Blocks2Cpp support helpers -----------------------------------

int main() {
    std::string name{};
    std::string city{};
    std::string motto{};
    int age{};
    double height{};
    char grade{};
    bool likes{};
    int lucky{};
    int count{};
    int extra{};
    name = b2c::ask_line("Name? ");
    city = b2c::ask_line();
    std::cout << "Motto? ";
    std::getline(std::cin >> std::ws, motto);
    age = b2c::ask<int>("Age? ");
    height = b2c::ask<double>();
    grade = b2c::ask<char>("?");
    likes = b2c::ask<bool>(std::string("Do you like ") + city + "? ");
    std::cin >> lucky;
    std::cout << "Count? ";
    std::cin >> count;
    extra = b2c::ask<int>(std::string(1, grade));
    name = b2c::ask_line(std::to_string(age));
    std::cout << name << " " << city << " " << motto << " " << age << " " << height << " " << grade
              << " " << (likes ? "true" : "false") << " " << lucky << " " << count << " " << extra
              << '\n';
    return 0;
}
