crates/b2c-codegen/tests/it/snapshots/it__snapshots__assignments.snap
---
source: crates/b2c-codegen/tests/it/snapshots.rs
expression: render(&project)
---
// Generated by Blocks2Cpp 1.0.0 from project "Snapshot Tests", module "main".
// Edit the blocks, not this file – changes here are overwritten.

#include <iostream>

int main() {
    int x = 10;
    double d = 1.5;
    x += 5;
    ++x;
    x -= 1;
    x *= 2;
    x /= 3;
    x %= 4;
    x += -1;
    ++d;
    d *= 0.5;
    x = x * x;
    std::cout << x << d << '\n';
    return 0;
}
