crates/b2c-codegen/tests/it/snapshots/it__snapshots__comments.snap
---
source: crates/b2c-codegen/tests/it/snapshots.rs
expression: render(&project)
---
// Generated by Blocks2Cpp 1.0.0 from project "Snapshot Tests", module "main".
// Edit the blocks, not this file – changes here are overwritten.

#include <iostream>

void bump(int& score);

// Adds one to the score.
//
// Keeps the empty line above.
void bump(int& score) {
    // Only below ten
    if (score < 10) {
        // Nested comments are indented.
        ++score;
    }
}

// Shows how block comments become C++ comments.
int main() {
    // Count the score
    int score = 0;
    // First line
    // Second line
    bump(score);
    // Looks like code: */ std::system("rm -rf /"); /*
    // x = 2;
    // std::system("evil");
    bump(score);
    // A path: C:\temp\ //
    bump(score);
    // trailing backslash and spaces \ //
    bump(score);
    // bidi: <U+202E>txt
    // after a line separator
    // and NEL
    std::cout << score << '\n';
    // what??/ //
    std::cout << score << '\n';
    // tab	here, vertical tab
    // form feed
    // end
    std::cout << score << '\n';
    return 0;
}
