crates/b2c-codegen/tests/it/snapshots/it__snapshots__empty_main.snap
---
source: crates/b2c-codegen/tests/it/snapshots.rs
expression: render(&project)
---
// Generated by Blocks2Cpp 1.0.0 from project "Snapshot Tests", module "main".
// Edit the blocks, not this file – changes here are overwritten.

int main() {
    return 0;
}
