crates/b2c-codegen/tests/it/snapshots/it__snapshots__eval_call.snap
---
source: crates/b2c-codegen/tests/it/snapshots.rs
expression: render(&project)
---
// Generated by Blocks2Cpp 1.0.0 from project "Snapshot Tests", module "main".
// Edit the blocks, not this file – changes here are overwritten.

#include <iostream>

void greet();
int twice(int x);

void greet() {
    std::cout << "Hi" << '\n';
}

int twice(int x) {
    return x * 2;
}

int main() {
    greet();
    twice(4);
    int r = twice(twice(5));
    std::cout << r << '\n';
    return 0;
}
