crates/b2c-codegen/tests/it/snapshots/it__snapshots__expressions.snap
---
source: crates/b2c-codegen/tests/it/snapshots.rs
expression: render(&project)
---
// Generated by Blocks2Cpp 1.0.0 from project "Snapshot Tests", module "main".
// Edit the blocks, not this file – changes here are overwritten.

#include <iostream>
#include <random>
#include <utility>

// ---- Blocks2Cpp support helpers (only those used) ------------------------
namespace b2c {

/// Returns a random whole number between `low` and `high`, including both.
/// The bounds may be given in either order. The random engine is seeded once,
/// from `std::random_device`, the first time this function is called.
inline int random_int(int low, int high) {
    static std::mt19937 engine{std::random_device{}()};
    if (low > high) {
        std::swap(low, high);
    }
    std::uniform_int_distribution<int> distribution(low, high);
    return distribution(engine);
}

}  // namespace b2c
// ---- End of Blocks2Cpp support helpers -----------------------------------

int main() {
    int a = 7;
    int c = 3;
    int e = 2;
    double d = 2.5;
    bool p = true;
    bool q = false;
    int e1 = (a + c) * e;
    int e2 = a - (c - e);
    int e3 = a - c - e;
    int e4 = -(a + c);
    int e5 = -(-a);
    int e6 = a % c + a / c;
    bool e7 = !(a < c);
    bool e8 = (a < c) == p;
    bool e9 = p || (q && p);
    bool e10 = (p || q) && p;
    bool e11 = p && q && q && p;
    bool e12 = (!p) == q;
    int e13 = p ? a : c;
    int e14 = (p ? a : c) + 1;
    int e15 = p ? a : q ? c : e;
    int e16 = (p ? q : p) ? a : c;
    int e17 = static_cast<int>(d) * 2;
    double e18 = static_cast<double>(a) / c;
    int e19 = b2c::random_int(1, a);
    bool e20 = (a <= c) != p;
    double e21 = -d + +d;
    int e22 = +(+a);
    int e23 = a - -c;
    bool e24 = !!p;
    double e25 = 1e-7;
    int e26 = a * b2c::random_int(1, 2);
    std::cout << e1 << " " << e2 << " " << e3 << " " << e4 << " " << e5 << " " << e6 << " "
              << (e7 ? "true" : "false") << " " << (e8 ? "true" : "false") << " "
              << (e9 ? "true" : "false") << " " << (e10 ? "true" : "false") << " "
              << (e11 ? "true" : "false") << " " << (e12 ? "true" : "false") << " " << e13 << " "
              << e14 << " " << e15 << " " << e16 << " " << e17 << " " << e18 << " " << e19 << " "
              << (e20 ? "true" : "false") << " " << e21 << " " << e22 << " " << e23 << " "
              << (e24 ? "true" : "false") << " " << e25 << " " << e26 << '\n';
    return 0;
}
