crates/b2c-codegen/tests/it/snapshots/it__snapshots__for_loops.snap
---
source: crates/b2c-codegen/tests/it/snapshots.rs
expression: render(&project)
---
// Generated by Blocks2Cpp 1.0.0 from project "Snapshot Tests", module "main".
// Edit the blocks, not this file – changes here are overwritten.

#include <iostream>
#include <random>
#include <utility>

// ---- Blocks2Cpp support helpers (only those used) ------------------------
namespace b2c {

/// Returns a random whole number between `low` and `high`, including both.
/// The bounds may be given in either order. The random engine is seeded once,
/// from `std::random_device`, the first time this function is called.
inline int random_int(int low, int high) {
    static std::mt19937 engine{std::random_device{}()};
    if (low > high) {
        std::swap(low, high);
    }
    std::uniform_int_distribution<int> distribution(low, high);
    return distribution(engine);
}

}  // namespace b2c
// ---- End of Blocks2Cpp support helpers -----------------------------------

int main() {
    int total = 0;
    int s = 3;
    int limit = 4;
    for (int i = 0; i < 5; ++i) {
        total += i;
    }
    for (int i = 1; i <= 9; i += 2) {
        total += i;
    }
    for (int i = 10; i >= 1; --i) {
        total += i;
    }
    for (int i = 20; i >= 0; i -= s) {
        total += i;
    }
    for (int i = 0, end = limit; i <= end; ++i) {
        limit -= 1;
    }
    for (int i = 0, step = b2c::random_int(1, 3); i < 10; i += step) {
        total += i;
    }
    for (int i = 3; i >= 1; --i) {
        total += i;
    }
    std::cout << total << limit << '\n';
    return 0;
}
