crates/b2c-codegen/tests/it/snapshots/it__snapshots__forever_break_continue.snap
---
source: crates/b2c-codegen/tests/it/snapshots.rs
expression: render(&project)
---
// Generated by Blocks2Cpp 1.0.0 from project "Snapshot Tests", module "main".
// Edit the blocks, not this file – changes here are overwritten.

#include <iostream>

int main() {
    int count = 0;
    while (true) {
        ++count;
        if (count < 3) {
            continue;
        }
        if (count >= 5) {
            break;
        }
        std::cout << count << '\n';
    }
    std::cout << "done" << '\n';
    return 0;
}
