crates/b2c-codegen/tests/it/snapshots/it__snapshots__functions.snap
---
source: crates/b2c-codegen/tests/it/snapshots.rs
expression: render(&project)
---
// Generated by Blocks2Cpp 1.0.0 from project "Functions", module "main".
// Edit the blocks, not this file – changes here are overwritten.

#include <iostream>
#include <string>

void add_bonus(int& score, int amount);
std::string describe(const std::string& who, bool happy);
int factorial(int n);
void greet(const std::string& name, int times);
bool is_even(int value);

void add_bonus(int& score, int amount) {
    score += amount;
}

std::string describe(const std::string& who, bool happy) {
    return who + " is " + (happy ? "happy" : "sad");
}

// Multiplies all whole numbers from 1 to n.
int factorial(int n) {
    if (n <= 1) {
        return 1;
    }
    return n * factorial(n - 1);
}

void greet(const std::string& name, int times) {
    for (int i = 0; i < times; ++i) {
        std::cout << "Hello, " << name << "!" << '\n';
    }
}

bool is_even(int value) {
    return value % 2 == 0;
}

int main() {
    greet("Ada", 2);
    // 5! = 120
    int score = factorial(5);
    add_bonus(score, 10);
    if (is_even(score)) {
        std::cout << describe("Grace", true) << '\n';
    }
    std::cout << score << '\n';
    return 0;
}
