crates/b2c-codegen/tests/it/snapshots/it__snapshots__if_else.snap
---
source: crates/b2c-codegen/tests/it/snapshots.rs
expression: render(&project)
---
// Generated by Blocks2Cpp 1.0.0 from project "Snapshot Tests", module "main".
// Edit the blocks, not this file – changes here are overwritten.

#include <iostream>

int main() {
    int n = 5;
    if (n < 3) {
        std::cout << "small" << '\n';
    } else if (n < 7) {
        std::cout << "medium" << '\n';
    } else if (n < 9) {
        std::cout << "large" << '\n';
    } else {
        std::cout << "huge" << '\n';
    }
    if (n == 5) {
        std::cout << "five" << '\n';
    }
    if (n > 0) {
        if (true) {
            std::cout << "nested" << '\n';
        } else {
        }
    } else {
        std::cout << "not positive" << '\n';
    }
    if (false) {
    }
    return 0;
}
